--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,7 +15,7 @@ sonar.exclusions=**/javascripts/dist/*.js,**/javascripts/vendor/*.js,**/styleshe
 sonar.language=js
 
 sonar.profile=node
-sonar.tests=spec/node
+sonar.tests=./
 
 sonar.dynamicAnalysis=reuseReports
 
